--- a/index.Rmd
+++ b/index.Rmd
@@ -67,6 +67,17 @@ library(quantmod)
 - 일별 데이터를 월별 데이터로 만드는 단계
 - Summary stat을 만드는 코드 (리포팅 코드 맛보기)
 
+## 강의 자료 (제 허락 없이 강의 비디오 외부 유출은 절대 하지 말아주세요. Don't distribute the lecture video without my permission.) 
+- 강의록 주소: https://jkyu126.github.io/lecture_r_code/
+- 강의 리플레이: https://drive.google.com/file/d/1xQtUt-96Bi9dKkUa9ZbZiPjfa0eE82H5/view?usp=sharing
+- 강의시 설명 노트: https://drive.google.com/file/d/1951boE97rmCKpnpTY07XCmtk9k1gEOZl/view?usp=sharing
+
+## 추가 자료 
+- pivot_longer: https://tidyr.tidyverse.org/reference/pivot_longer.html
+- pivot_wider: https://tidyr.tidyverse.org/reference/pivot_wider.html
+- Join: https://www.guru99.com/r-dplyr-tutorial.html
+
+
 # 코드 
 
 - Github의 제 코드 페이지 (https://github.com/jkyu126/lecture_r_code) 를 들어갑니다. 
@@ -76,6 +87,7 @@ library(quantmod)
 
 ```{r eval=F, tidy=T}
 
+
 rm(list=ls())
 library(tidyverse)
 
@@ -84,10 +96,12 @@ library(tidyverse)
 
 ## 1. Import shareoutstanding data (Dataguide)
 
-shrout = read.csv("./01_data/list/dataguide_shrout.csv", stringsAsFactors = F) %>%
+shrout = read.csv("01_data/list/dataguide_shrout.csv", stringsAsFactors = F) %>%
   select(-Symbol) %>%
-  tidyr::gather(Varname, Var, starts_with("A")) %>%
-  mutate(stock2 = substr(Varname, 2,7), shrout = sapply(Var, function(x) gsub(",", "", x) %>% as.numeric())) %>%
+  pivot_longer(!date_id, names_to = "Varname", values_to = "Var") %>%
+  mutate(stock2 = substr(Varname, 2,7), 
+         shrout = sapply(Var, function(x) gsub(",", "", x) %>% 
+                           as.numeric())) %>%
   select(date_id, stock2, shrout) %>%
   arrange(stock2, date_id) %>% 
   drop_na() %>%
@@ -95,20 +109,20 @@ shrout = read.csv("./01_data/list/dataguide_shrout.csv", stringsAsFactors = F) %
 
 ## 2. Import price data (Dataguide)
 
-price = read.csv("./01_data/list/dataguide_price.csv", stringsAsFactors = F)
-for (i in 3:ncol(price)){
-  price[,i] = sapply(price[,i], function(x) gsub(",", "", x))
-  price[,i] = as.numeric(price[,i])
-}
-price2 = price %>% 
-  tidyr::gather(stock, price, starts_with("A")) %>%
-  mutate(stock2 = substr(stock, 2,7)) %>%
-  select(-Symbol, -stock) %>%
-  drop_na(price)
+price2 = read.csv("01_data/list/dataguide_price.csv", stringsAsFactors = F) %>%
+  select(-Symbol) %>%
+  pivot_longer(!date_id, names_to = "Varname", values_to = "Var") %>%
+  mutate(stock2 = substr(Varname, 2,7), 
+         price = sapply(Var, function(x) gsub(",", "", x) %>% 
+                           as.numeric())) %>%
+  select(date_id, stock2, price) %>%
+  arrange(stock2, date_id) %>% 
+  drop_na() %>%
+  as.data.frame()
 
 ## 3. Import SAS calculated files
 sas = read.csv("./01_data/summary.csv", stringsAsFactors = F) %>%
-  mutate(stock2 = substr(ISU_CD,4,9), tradeday=1) %>%
+  mutate(stock2 = substr(ISU_CD,4,9)) %>%
   drop_na(mm)
 
 ## 4. Import Price Efficiency data
@@ -154,17 +168,21 @@ filt2= merged %>% filter(nr_trades>10)
 
 wins1 = filt2 %>%
   select(stock2, date_id, price:mktcap_bil, sig.s, sig.p, PE) %>%
-  tidyr::gather(Varname, Var, -(stock2:date_id)) %>%
+  pivot_longer(!(stock2:date_id), names_to = "Varname", values_to = "Var") %>%
   group_by(stock2, Varname) %>%
-  mutate(perc = ntile(Var,100), perc99 = quantile(Var, 0.99, na.rm=T), perc1 = quantile(Var, 0.01, na.rm=T)) %>%
-  mutate(adjVar = ifelse(perc==100, perc99, ifelse(perc==1, perc1, Var))) %>%
+  mutate(perc = ntile(Var,100), 
+         perc99 = quantile(Var, 0.99, na.rm=T), 
+         perc1 = quantile(Var, 0.01, na.rm=T)) %>%
+  mutate(adjVar = 
+           ifelse(perc==100, perc99, 
+                  ifelse(perc==1, perc1, Var))) %>%
   as.data.frame()
 
 ## 2. Transformation: Long to Wide 
 
 wins2 = wins1 %>% 
-  select(stock2, date_id, Varname, adjVar) %>%
-  tidyr::spread(Varname, adjVar)
+  select(stock2, date_id, Varname, adjVar)%>%
+  pivot_wider(names_from = Varname, values_from = adjVar)
 
 ## 3. Merge Winsorized data and dummy variables
 wins3 = 
@@ -194,8 +212,6 @@ library(dplyr)
 mydat = read.csv("./01_data/DF.csv", stringsAsFactors = F)
 monthdat = 
   mydat %>%
-  mutate(dg = ifelse(month==201603 & post_mm==1, dg+1, dg),
-         month = ifelse(month==201603 & post_mm==1, month+1, month)) %>% #assign 20160328-20160331 to the next month (dg)
   arrange(stock2, dg, date_id) %>%
   group_by(stock2, dg) %>%
   summarise(mm = mean(mm),
@@ -230,10 +246,12 @@ monthdat = read.csv("./01_data/monthdat.csv", stringsAsFactors = F)
 
 t1 = monthdat %>%
   select(mm, espread:mktcap) %>% 
-  tidyr::gather(Varname, Var, espread:mktcap)%>%
+  pivot_longer(!mm, names_to="Varname", values_to = "Var") %>%
   group_by(mm, Varname) %>%
   summarise(Mean = mean(Var, na.rm=T), Std = sd(Var, na.rm=T), Min=min(Var, na.rm=T), Max=max(Var, na.rm=T), Median=median(Var, na.rm=T)) %>% 
-  arrange(desc(mm), match(Varname, c("espread", "qspread", "rspread", "adv_selection", "amihud", "volatility", "volume", "dvolume",
+  arrange(desc(mm), 
+          match(Varname, c("espread", "qspread", "rspread", "adv_selection", 
+                           "amihud", "volatility", "volume", "dvolume",
                                      "price", "nr_trades", "ret", "mktcap"))) %>%
   ungroup() %>%
   select(-mm) %>%
